generate underscores for random chosen word length

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,6 +22,7 @@
 
 #wordSpace {
     margin: 0 auto;
+    margin-top: 3.5em;
     font-size: 2.9em;
     text-align: center;
     color: darkslategray;
